--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "pinia": "^2.1.7",
